fixed bubble wrapping

--- a/src/components/Badge/badge.scss
+++ b/src/components/Badge/badge.scss
@@ -9,4 +9,6 @@
   font-weight: bold;
   font-size: 12px;
   color: $onyxblacktext;
+  white-space: nowrap;
+  overflow: hidden;
 }
