--- a/src/components/RenderRouter/HomeChurchItem.scss
+++ b/src/components/RenderRouter/HomeChurchItem.scss
@@ -61,7 +61,6 @@
   letter-spacing: -0.3px;
   display: inline;
   color: $onyxblacktext;
-  margin-left: 6px;
 }
 .HomeChurchTimeOfDay {
   margin-top: 4px;
@@ -422,7 +421,6 @@
     font-family: Graphik Web;
   }
   .HomeChurchDayOfWeek {
-    margin-left: 6px;
     font-size: 14px;
     color: $onyxblacktext;
   }
